feat cambios index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Confi Plant | Store - Cultivo Inteligente</title>
+    <meta name="description" content="Confi Plant te permite controlar y cuidar tus plantas desde tu celular, cuando y
+    donde quieras!."/>
+
+    <meta name="keywords" content="cultivo indoor, plantas, tienda en línea, controla rh, vpd, temperatura, humedad"/>
+    <meta name="language" content="es"/>
+    <meta name="author" content="Confi Plant"/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="og:image" content="https://confiplant.store/assets/logo-new-FnjDlsYf.png"/>
+    <meta name="og:description" content="Confi Plant te permite controlar y cuidar tus plantas desde tu celular, cuando y
+    donde quieras!."/>
   </head>
   <body>
     <div id="root"></div>
